--- a/src/main/webapp/academico/aluno/index.xhtml
+++ b/src/main/webapp/academico/aluno/index.xhtml
@@ -26,7 +26,7 @@
 				style="padding-left: 0px; overflow: hidden;">
 				<h:panelGrid styleClass="tabela_aluno" style="border:0;">
 					<f:facet name="header">
-						<h:outputText value="Lista das Disciplinas por Professor" />
+						<h:outputText value="Lista de disciplina por professor" />
 					</f:facet>
 				</h:panelGrid>
 				<h:dataTable id="tabela"
@@ -92,8 +92,7 @@
 			<!-- Modal -->
 
 			<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-				aria-labelledby="myModalLabel" data-backdrop="static"
-				>
+				aria-labelledby="myModalLabel" data-backdrop="static">
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
 						<h:panelGroup id="id-panelGroup-confirma-modal">
@@ -120,12 +119,15 @@
 									</h:panelGroup>
 								</h3>
 								<h:commandLink styleClass="close"
-									actionListener="#{professorTurmaBean.fechar}">
+									>
 									<f:passThroughAttribute name="data-dismiss" value="modal" />
 									<f:passThroughAttribute name="aria-label" value="Close" />
 									<h:panelGroup aria-hidden="true">&times;
 									
 									</h:panelGroup>
+									<f:passThroughAttribute name="data-dismiss" value="modal" />
+									<p:ajax event="click" listener="#{professorTurmaBean.fechar}"
+										update="form_ambiente_comum:tabela:idDisciplina" />
 								</h:commandLink>
 							</div>
 							<h:panelGroup
@@ -190,9 +192,10 @@
 						<div class="modal-footer">
 
 							<h:commandButton styleClass="btn btn-primary"
-								value=" &#x2716; Fechar"
-								actionListener="#{professorTurmaBean.fechar}">
-
+								value=" &#x2716; Fechar">
+								<f:passThroughAttribute name="data-dismiss" value="modal" />
+								<p:ajax event="click" listener="#{professorTurmaBean.fechar}"
+									update="form_ambiente_comum:tabela:idDisciplina" />
 							</h:commandButton>
 						</div>
 					</div>
