--- a/src/main/webapp/academico/aluno/horario/horario.xhtml
+++ b/src/main/webapp/academico/aluno/horario/horario.xhtml
@@ -76,7 +76,7 @@
 						<h:dataTable id="tabela-horarios"
 							value="#{horarioBean.horarioAulas}" var="horarioAula"
 							columnClasses="horario"
-							styleClass="table table-bordered tabelaProfessor tabela-hover  tabela-funcionario  tabelaHorarioAluno tabela-horarios"
+							styleClass="table table-bordered tabelaProfessor tabela-hover  tabela-funcionario  tabelaHorarioAluno tabela-horarios center"
 							rowClasses="linha2, linha1">
 							<h:column>
 								<f:facet name="header">
